--- a/newPage/index.html
+++ b/newPage/index.html
@@ -18,7 +18,12 @@
         body{
             background-color: var(--background-color);
             margin: 0;
-            font-family: "Trebuchet MS";
+            font-family: FreeSans;
+        }
+
+        header{
+            background: rgb(116,109,149);
+            background: radial-gradient(circle, rgba(116,109,149,1) 0%, rgba(10,10,10,1) 100%);
         }
 
         header, footer{
@@ -73,7 +78,7 @@
         nav span a:hover{
             background-color: var(--accent-color);
             color: white;
-            animation: load 1s infinite;
+            animation: load 1s;
             box-shadow: 0px 0px 15px 0px var(--accent-color);
         }
 
@@ -111,8 +116,8 @@
 
          .headlineWrap{
             background-color: var(--background-color);
-            width: fit-content;
-            margin-top: -3.3em;
+            position: absolute;
+            margin-top: -3em;
         }
 
         @keyframes flyin {
