Einbindung des Beispiel

--- a/newPage/codeblox.html
+++ b/newPage/codeblox.html
@@ -147,7 +147,7 @@
 </head>
 <body>
 
-printCode(document.body, "Hello World Programm", "js", "test.java", true);
+<script>printCode(document.body, "Hello World Programm", "js", "../u6/a3.html", true);</script>
 <br>
 <br>
 </body>
