--- a/u6/a2.html
+++ b/u6/a2.html
@@ -12,9 +12,8 @@
         text-align: center;
     }
 
-    #drawArea{
+    #drawArea, #drawArea2{
         background-color: #ececec;
-
         display: block;
         margin: 0 auto 0;
 
@@ -23,6 +22,7 @@
     circle{
         stroke: #000000;
         stroke-width: 1;
+        cursor: pointer;
     }
 
     text{
@@ -41,21 +41,24 @@
     <rect width="100%" height="100%" fill="url(#tenthGrid)"/>
 
     <g stroke="gray" stroke-width="2" fill="none">
-        <path class="lines" data-name="A,C" d="M 70 250 L 20 110"></path>
-        <path class="lines" data-name="A,B" d="M 220 60 L 20 110"></path>
-        <path class="lines" data-name="B,C" d="M 70 250 Q 20 110 220 60"></path>
+        <path id="ac" d="M 70 250 L 20 110"></path>
+        <path id="ab" d="M 220 60 L 20 110"></path>
+        <path id="bc" d="M 70 250 Q 20 110 220 60"></path>
     </g>
 
-        <circle data-name="A" r="5" cx="20" cy="110" fill="green"></circle>
-        <circle data-name="B" r="5" cx="220" cy="60" fill="blue"></circle>
-        <circle data-name="C" r="5" cx="70" cy="250" fill="red"></circle>
+        <circle id="a" r="5" cx="20" cy="110" fill="green"></circle>
+        <circle id="b" r="5" cx="220" cy="60" fill="blue"></circle>
+        <circle id="c" r="5" cx="70" cy="250" fill="red"></circle>
 
+        <text id="lA" x="30" y="120">(20,110)</text>
+        <text id="lB" x="230" y="70">(220,60)</text>
+        <text id="lC" x="80" y="260">(70,250)</text>
 
 </svg>
 <script>
     window.addEventListener("load",()=>{
         const drawArea = document.getElementById("drawArea");
-        const circles = document.getElementsByTagNameNS("http://www.w3.org/2000/svg", "circle");
+        const circles = document.querySelectorAll("#drawArea circle");
         for(let c of circles){
             let m = move(c);
             c.addEventListener("mousedown", ()=>{
@@ -69,24 +72,46 @@
 
 
 
-    function move(c){
+    function move(cir){
         return (e)=>{
-            const cName = c.getAttribute("data-name");
-            const paths = document.getElementsByClassName("lines");
-            for(let p of paths){
-                let pSplit = p.getAttribute("data-name").split(",");
-                if(pSplit[0] == cName || pSplit[1] == cName){
-                    p.setAttribute("stroke", "red");
-                }
-            }
+            cir.setAttribute("cx", e.offsetX);
+            cir.setAttribute("cy", e.offsetY);
+
+            const cirA = document.querySelector("#drawArea #a");
+            const cirB = document.querySelector("#drawArea #b");
+            const cirC = document.querySelector("#drawArea #c");
+
+            const pathAc = document.querySelector("#drawArea #ac");
+            const pathBc = document.querySelector("#drawArea #bc");
+            const pathAb = document.querySelector("#drawArea #ab");
+            const lableA = document.querySelector("#drawArea #lA");
+            const lableB = document.querySelector("#drawArea #lB");
+            const lableC = document.querySelector("#drawArea #lC");
+
+            const cirAXY = [parseInt(cirA.getAttribute("cx")), parseInt(cirA.getAttribute("cy"))];
+            const cirBXY = [parseInt(cirB.getAttribute("cx")), parseInt(cirB.getAttribute("cy"))];
+            const cirCXY = [parseInt(cirC.getAttribute("cx")), parseInt(cirC.getAttribute("cy"))];
 
 
-            c.setAttribute("cx", e.offsetX);
-            c.setAttribute("cy", e.offsetY);
+            pathAb.setAttribute("d","M" + cirAXY[0] + " " + cirAXY[1] + " L " + cirBXY[0] + " " + cirBXY[1]);
+            pathAc.setAttribute("d","M" + cirAXY[0] + " " + cirAXY[1] + " L " + cirCXY[0] + " " + cirCXY[1]);
+
+            pathBc.setAttribute("d","M" + cirBXY[0] + " " + cirBXY[1] + " Q " + cirAXY[0] + " " + cirAXY[1] + " "+ cirCXY[0] + " " + cirCXY[1]);
+
+            lableA.setAttribute("x", (cirAXY[0] + 10).toString());
+            lableA.setAttribute("y", (cirAXY[1] + 10).toString());
+            lableA.innerHTML = "(" + cirAXY[0] + "," + cirAXY[1] + ")";
+
+            lableB.setAttribute("x", (cirBXY[0] + 10).toString());
+            lableB.setAttribute("y", (cirBXY[1] + 10).toString());
+            lableB.innerHTML = "(" + cirBXY[0] + "," + cirBXY[1] + ")";
+
+            lableC.setAttribute("x", (cirCXY[0] + 10).toString());
+            lableC.setAttribute("y", (cirCXY[1] + 10).toString());
+            lableC.innerHTML = "(" + cirCXY[0] + "," + cirCXY[1] + ")";
+
         };
     };
-
-
 </script>
 </body>
 </html>
