LIT Element WWW-Navigator

--- a/Aufgabe5/Aufgabe4.html
+++ b/Aufgabe5/Aufgabe4.html
@@ -106,11 +106,11 @@
 <div id="mainWrapper">
     <aside>
         <ul id="subTopics">
-
         </ul>
     </aside>
     <main id="content">
-        Hallo
+        <h3>Herzlich Wilkommen</h3>
+        Wählen Sie eins der Drei Haut-Topics aus, damit Sie die entsprechenden Untermeüs angezeigt bekommen.
     </main>
 </div>
 
