--- a/u9/pwa/index.html
+++ b/u9/pwa/index.html
@@ -6,13 +6,13 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>WWW Navi</title>
-  <!--<link rel="manifest" href="manifest.json">-->
+  <link rel="manifest" href="manifest.json">
   <script src="serviceWorker.js"></script>
   <script src="content.js" type="module"></script>
   <script>
     if("serviceWorker" in navigator){ //Prüfen ob der Browser ServiceWorker unterstützt
       window.addEventListener("load", ()=>{
-        navigator.serviceWorker.register("serviceWorker.js")
+        navigator.serviceWorker.register("serviceWorker.js", {"scope": "/WS21-Web-Engineering-Master/u9/pwa/"})
                 .then((sw)=>{
                   //Registrierung erfolgreich
                   console.log("ServiceWorker angelegt " + sw.scope);
