--- a/u9/pwa/index.html
+++ b/u9/pwa/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>WWW Navi</title>
-  <link rel="manifest" href="manifest.json">
+<!--  <link rel="manifest" href="manifest.json">-->
   <script src="serviceWorker.js"></script>
   <script src="content.js" type="module"></script>
   <script>
