Renew Content-Loader

--- a/index2.html
+++ b/index2.html
@@ -11,25 +11,17 @@
 <body>
     <div id="side-wrapper">
         <header>
-            <nav>
                 <span id="logo">WEM</span>
-                <ul>
-                    <li>Home</li>
-                    <li>Aufgaben</li>
-                    <li>About</li>
+                <ul id="main-menu">
+                    <!-- Content will be inserted by the Content loader-->
                 </ul>
-            </nav>
         </header>
         <aside>
-            <ul>
-                <li>Tets</li>
-                <li>rrrrr</li>
-                <li>rsdf</li>
-                <li>gsdfg</li>
-                <li>ss</li>
-            </ul>
+                <ul id="side-menu">
+                    <!-- Content will be inserted by the Content loader-->
+                </ul>
         </aside>
-        <main>Main
+        <main id="content-area">Main
         </main>
         <footer>&copy; 2022 Moritz Balg</footer>
     </div>
