Erste Lösungen eingetragen

--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -1,1 +1,24 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Die Geschichte des WWW</h2>
+<details class="question-box">
+    <summary>Mit welchen fachlichen Argumenten wurde das WWW-Proposal von TBL abgelehnt?</summary>
+    <p>Man hielt den Ansatz von TBL für einen Rückschritt, da durch seine Vorschläge "broken-links" entstehen konnten. Dieses Problem meinte man bereits gelöst zu haben. 
+    </p>
+</details>
+
+<details class="question-box">
+    <summary>Was sind die fachlichen Argumente, warum das WWW dennoch ein Erfolg wurde?</summary>
+    <p>Das Konzept von TBL sah es vor, dass das Protokoll, die Auszeichnungssprache und die Identifikation von Ressourcen losgelöst voneinander entwickelt werden konnten. Der Erfolg gibt TBL recht. Auch heute ca. 30 Jahre später wird immer noch auf seiner Basis weiterentwickelt. </p>
+</details>
+
+<details class="question-box">
+    <summary>Was wäre der Preis für die garantierte Verhinderung von “broken links”?</summary>
+    <p>Zur Vermeidung von "broken-links" müsste ein zentrales Verzeichnis angelegt werden, in dem alle Ressourcen verwaltet werden. Neue Webseiten müssten sich bei diesem Verzeichnis anmelden und abgeschaffte Seiten müssten abgemeldet werden. Lösungen zur Löschweitergabe müssten implementiert werden, damit die referenzielle Integrität gewahrt werden kann.</p>
+</details>
+
+<figure>
+    <img src="../../assets/img/u1/tribute.png" alt="" srcset="">
+    <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+</figure>
+
+<typing-field>Klappt das?</typing-field>
+
