added some animations for smoother look

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
                     <!-- Content will be inserted by the Content loader-->
                 </ul>
         </header>
-        <aside id="main-aside">
-                <ul id="side-menu">
-                    <!-- Content will be inserted by the Content loader-->
-                </ul>
-        </aside>
-        <main id="content-area">Main
-        </main>
+        <div id="center-section">
+            <aside id="main-aside">
+                    <ul id="side-menu">
+                        <!-- Content will be inserted by the Content loader-->
+                    </ul>
+            </aside>
+            <main id="content-area">Main
+            </main>
+        </div>
         <footer>&copy; 2022 Moritz Balg</footer>
     </div>
 </body>
