--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <!-- Content will be inserted by the Content loader-->
                 </ul>
         </header>
+    <div id="hider"></div>
         <div id="center-section">
             <aside id="main-aside">
                     <ul id="side-menu">
