--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Web Engineering Master</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='assets/style/css/main.css'>
+    <link rel="shortcut icon" href="assets/img/Zeichnung-1.svg" type="image/x-icon">
     <script src='assets/js/main.js'></script>
     <script type="module" src="assets/js/components/tipping/typing-field.js"></script>
     <script type="module" src="assets/js/components/fileViewer/fileViewer.js"></script>
