Farben angepasst und Komponente für die Task Karten erstellt

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Web Engineering Master</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='assets/style/css/main.css'>
-    <link rel="shortcut icon" href="assets/img/Zeichnung-1.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo.svg" type="image/x-icon">
     <script src='assets/js/main.js'></script>
     <script type="module" src="assets/js/components/tipping/typing-field.js"></script>
     <script type="module" src="assets/js/components/fileViewer/fileViewer.js"></script>
+    <script type="module" src='assets/js/components/lit/task-card/task-card.mjs'></script>
 </head>
 <body>
     <div id="side-wrapper">
         <header>
-                <span id="logo">WEM</span>
+                <img id="logo" src="assets/img/logo.svg" alt="WEM">
                 <ul id="main-menu">
                     <li id="hide-menu">X</li>
                     <!-- Content will be inserted by the Content loader-->
