--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -16,7 +16,7 @@
 </details>
 
 <figure>
-    <img src="./../../assets/img/u1/tribute.png" alt="Error">
+    <img src="../../assets/img/u1/tribute.png" alt="Error">
     <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
 </figure>
 
