--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Web Engineering Master</title>
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript, PWA, WA, SVG, Node">
+    <meta name="author" content="Moritz Balg">
+    <meta name="theme-color" content="#b8ccc1">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+    <title>Web Engineering Master</title>
+    
     <link rel='stylesheet' type='text/css' media='screen' href='assets/style/css/main.css'>
     <link rel="shortcut icon" href="assets/img/logo.svg" type="image/x-icon">
+    <link rel="manifest" href="manifest.webmanifest">
+
     <script src='assets/js/main.js'></script>
     <script type="module" src="assets/js/components/tipping/typing-field.js"></script>
     <script type="module" src="assets/js/components/fileViewer/fileViewer.js"></script>
