--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#b8ccc1">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+    <base href="/WS21-Web-Engineering-Master/">
     <title>Web Engineering Master</title>
     
     <link rel='stylesheet' type='text/css' media='screen' href='assets/style/css/main.css'>
