--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#b8ccc1">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+    <!--Empty String for local development-->
     <base href="/WS21-Web-Engineering-Master/">
     <title>Web Engineering Master</title>
     
