added File Viewer

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
     <script src='assets/js/main.js'></script>
     <script type="module" src="assets/js/components/tipping/typing-field.js"></script>
-    <script type="module" src="assets/js/components/fileViewer/fileViewer.js"></script>
     <script type="module" src='assets/js/components/lit/task-card/task-card.mjs'></script>
+    <script type="module" src="assets/js/components/lit/fileView/FileView.mjs" ></script>
+
 </head>
 <body>
     <div id="side-wrapper">
